@@ -194,6 +194,8 @@ gnome/evince
 xap/filezilla
 xap/galculator
 xap/gcolor2
+xap/geany
+xap/geany-plugins
 gnome/gnote
 gnome/gthumb
 xap/gtkcdlabel
@@ -210,6 +212,7 @@ xap/transmission
 xap/virtualbox
 xap/virtualbox-kernel
 xap/virtualbox-extension-pack
+xap/winff
 
 ################
 # Translations #
