@@ -1,0 +1,12 @@
+             |-----handy-ruler------------------------------------------------------|
+geany-plugins: geany plugins (additional plugins for Geany)
+geany-plugins:
+geany-plugins: Geany Plugins is a package of the plugins from the Geany site that 
+geany-plugins: will enhance and extend Geany's capabilities.  Most of these plugins
+geany-plugins: were developed by various developers on SourceForge.net.
+geany-plugins:
+geany-plugins: 
+geany-plugins:
+geany-plugins:
+geany-plugins:
+geany-plugins: Package created by Niki Kovacs <info@microlinux.fr>
