@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+geany: geany (small and lightweight Integrated Development Environment)
+geany:
+geany: Geany is a text editor using the GTK2 toolkit with basic features of
+geany: an integrated development environment. It was developed to provide a
+geany: small and fast IDE, which has only a few dependencies from other
+geany: packages. It supports many filetypes and has some nice features.
+geany:
+geany: 
+geany:
+geany:
+geany: Package created by Niki Kovacs <info@microlinux.fr>
